tests/inter/fail/illegal-027.dcf
int x[] = {1, true};

void main() {}